# RAG_Truncation_Approach

./: LICENSE  README.md  app.py  lab.ipynb  langchain.md  pyproject.toml
evaluation/: eval.py  test.py  tests.jsonl
implementation/: answer.py  ingest.py
